--- a/NLP-With-Disaster-Tweets/notebook.ipynb
+++ b/NLP-With-Disaster-Tweets/notebook.ipynb
@@ -521,6 +521,235 @@
     "print(\"Common disaster keywords in disaster tweets:\")\n",
     "print(common_keywords_disaster)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fee4bac",
+   "metadata": {},
+   "source": [
+    "## Text Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "020f8ed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    our deeds are the reason of this earthquake ma...\n",
+       "1                forest fire near la ronge sask canada\n",
+       "2    all residents asked to shelter in place are be...\n",
+       "3    13000 people receive wildfires evacuation orde...\n",
+       "4    just got sent this photo from ruby alaska as s...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Clean tweets (text) and keywords by removing any urls, mentions, hashtags, non-alphabetic chars and even stopwords and convert everything to lowercase\n",
+    "import string\n",
+    "tweet['text'] = tweet['text'].str.replace(r'http\\S+|www\\S+|https\\S+', '', case=False)  \n",
+    "tweet['text'] = tweet['text'].str.replace(r'@\\w+', '', case=False) \n",
+    "tweet['text'] = tweet['text'].str.replace(r'#\\w+', '', case=False)  \n",
+    "tweet['text'] = tweet['text'].str.replace(r'[^a-zA-Z\\s]', '', case=False) \n",
+    "tweet['text'] = tweet['text'].str.replace(r'\\s+', ' ', case=False) \n",
+    "tweet['text'] = tweet['text'].str.replace('#', '', case=False)\n",
+    "tweet['text'] = tweet['text'].str.replace(\"'\", '', case=False)\n",
+    "tweet['text'] = tweet['text'].str.translate(str.maketrans('', '', string.punctuation))\n",
+    "tweet['text'] = tweet['text'].str.strip() \n",
+    "tweet['text'] = tweet['text'].str.lower()  \n",
+    "tweet['text'].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3fed3785",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "      <th>text_length</th>\n",
+       "      <th>keyword_in_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>our deeds are the reason of this earthquake ma...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>forest fire near la ronge sask canada</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>all residents asked to shelter in place are be...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>133</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13000 people receive wildfires evacuation orde...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>just got sent this photo from ruby alaska as s...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id keyword location                                               text  \\\n",
+       "0   1     NaN      NaN  our deeds are the reason of this earthquake ma...   \n",
+       "1   4     NaN      NaN              forest fire near la ronge sask canada   \n",
+       "2   5     NaN      NaN  all residents asked to shelter in place are be...   \n",
+       "3   6     NaN      NaN  13000 people receive wildfires evacuation orde...   \n",
+       "4   7     NaN      NaN  just got sent this photo from ruby alaska as s...   \n",
+       "\n",
+       "   target  text_length  keyword_in_text  \n",
+       "0       1           69            False  \n",
+       "1       1           38            False  \n",
+       "2       1          133            False  \n",
+       "3       1           65            False  \n",
+       "4       1           88            False  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a9e3e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31    ablaze\n",
+       "32    ablaze\n",
+       "33    ablaze\n",
+       "34    ablaze\n",
+       "35    ablaze\n",
+       "36    ablaze\n",
+       "37    ablaze\n",
+       "38    ablaze\n",
+       "39    ablaze\n",
+       "40    ablaze\n",
+       "41    ablaze\n",
+       "42    ablaze\n",
+       "43    ablaze\n",
+       "44    ablaze\n",
+       "45    ablaze\n",
+       "46    ablaze\n",
+       "47    ablaze\n",
+       "48    ablaze\n",
+       "49    ablaze\n",
+       "50    ablaze\n",
+       "51    ablaze\n",
+       "52    ablaze\n",
+       "53    ablaze\n",
+       "54    ablaze\n",
+       "55    ablaze\n",
+       "56    ablaze\n",
+       "57    ablaze\n",
+       "58    ablaze\n",
+       "59    ablaze\n",
+       "60    ablaze\n",
+       "Name: keyword, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's do the same for keyword\n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'http\\S+|www\\S+|https\\S+', '', case=False)  \n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'@\\w+', '', case=False) \n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'#\\w+', '', case=False)  \n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'[^a-zA-Z\\s]', '', case=False) \n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'\\s+', ' ', case=False) \n",
+    "tweet['keyword'] = tweet['keyword'].str.replace('#', '', case=False)\n",
+    "#remove numbers too\n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(r'\\d+', '', case=False)\n",
+    "tweet['keyword'] = tweet['keyword'].str.replace(\"'\", '', case=False)\n",
+    "tweet['keyword'] = tweet['keyword'].str.translate(str.maketrans('', '', string.punctuation))\n",
+    "tweet['keyword'] = tweet['keyword'].str.strip() \n",
+    "tweet['keyword'] = tweet['keyword'].str.lower()  \n",
+    "tweet['keyword'].head(20)\n",
+    "# check with non null values\n",
+    "tweet[tweet['keyword'].notnull()]['keyword'].head(30)\n",
+    "tw"
+   ]
   }
  ],
  "metadata": {
