kinda done with text processing and getting started with feature eng - creation of vectorized text features

--- a/NLP-With-Disaster-Tweets/notebook.ipynb
+++ b/NLP-With-Disaster-Tweets/notebook.ipynb
@@ -747,9 +747,96 @@
     "tweet['keyword'] = tweet['keyword'].str.lower()  \n",
     "tweet['keyword'].head(20)\n",
     "# check with non null values\n",
-    "tweet[tweet['keyword'].notnull()]['keyword'].head(30)\n",
-    "tw"
+    "tweet[tweet['keyword'].notnull()]['keyword'].head(30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "68e54de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keyword\n",
+      "fatalities              45\n",
+      "deluge                  42\n",
+      "armageddon              42\n",
+      "sinking                 41\n",
+      "damage                  41\n",
+      "                        ..\n",
+      "forest20fire            19\n",
+      "epicentre               12\n",
+      "threat                  11\n",
+      "inundation              10\n",
+      "radiation20emergency     9\n",
+      "Name: count, Length: 221, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tweet[\"text\"].value_counts()\n",
+    "print(tweet[\"keyword\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6e231f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keyword\n",
+      "fatalities            45\n",
+      "deluge                42\n",
+      "armageddon            42\n",
+      "sinking               41\n",
+      "damage                41\n",
+      "                      ..\n",
+      "forestfire            19\n",
+      "epicentre             12\n",
+      "threat                11\n",
+      "inundation            10\n",
+      "radiationemergency     9\n",
+      "Name: count, Length: 221, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove numbers from keywords as well without regex\n",
+    "for i in range(10):\n",
+    "    tweet['keyword'] = tweet['keyword'].str.replace(str(i), ' ')\n",
+    "print(tweet[\"keyword\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a50ae59",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c868f286",
+   "metadata": {},
+   "source": [
+    "#### Creation of vectorized text features? TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f24e04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
